# feishu_skill

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/plans/: 2026-02-17-feishu-cloud-docs-impl-plan.md  2026-02-17-feishu-cloud-docs-skill-design.md
feishu_cli/: __init__.py  client.py  config.py  main.py  runtime.py
feishu_cli/auth/: __init__.py  session.py
feishu_cli/commands/: __init__.py  auth.py  bitable.py  docs.py  docx.py  sheets.py  wiki.py
feishu_cli/utils/: output.py
scripts/: feishu-cli.sh  full_feishu_cli_e2e.sh  setup.sh  smoke_feishu_cli.sh  test.sh
skill/: feishu-cloud-docs.md
skills/feishu-cloud-docs/: SKILL.md
skills/feishu-cloud-docs/references/: auth.md  bitable.md  docx.md  error-codes.md  sheets.md  wiki.md
skills/feishu-cloud-docs/scripts/: bitable-full-crud.sh  check-auth.sh  docx-create-and-write.sh  sheets-read-all.sh  wiki-list-all.sh
skills/feishu-cloud-docs/templates/: bitable-field-types.json  bitable-record.json  docx-block-code.json  docx-block-text.json  wiki-node.json
tests/: conftest.py  haiku-agent-test.md  test_auth.py  test_auth_session.py  test_bitable.py  test_config.py  test_docs.py  test_docx.py  test_output.py  test_runtime.py  test_sheets.py  test_wiki.py  validate-results.sh
