[project]
name = "feishu-cli"
version = "0.1.0"
description = "CLI tool for Feishu cloud document operations"
requires-python = ">=3.7"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
feishu-cli = "feishu_cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
